--- a/index.html
+++ b/index.html
@@ -19,25 +19,29 @@
 <main>
 <h2> Vote for your Favorite Item </h2>
 
-<div id="images-section">
+<div id="imagesSection">
 <img  id="left-img" src="" alt="" title="">
 <img  id="middle-img" src="" alt="" title="">
 <img  id="right-img" src="" alt="" title="">
 </div>
 
+<ul id="listResult">
 
+</ul>
+<!-- 
 <div id="myList">
 
 
 
     <button onClick="window.location.reload();">Reset</button>
-</div>
-
+</div> -->
+<canvas id="myChart"></canvas>
 </main>
 
     <footer>
 
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <script src="JavaScript/app.js"></script>
 </body>
 </html>
