--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 <h2> Vote for your Favorite Item </h2>
 
 <div id="imagesSection">
-<img  id="left-img" src="" alt="" title="">
-<img  id="middle-img" src="" alt="" title="">
-<img  id="right-img" src="" alt="" title="">
+<img  id="leftImg" src="" alt="" title="">
+<img  id="middleImg" src="" alt="" title="">
+<img  id="rightImg" src="" alt="" title="">
 </div>
 
 <ul id="listResult">
